--- a/Web-Application/Front_End/public/index.html
+++ b/Web-Application/Front_End/public/index.html
@@ -50,28 +50,31 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
 
+    <!-- <input id="color_picker" type="color" onchange="led_change(this.value);return false" />
+    <div id="color_div"></div> -->
+    
     <!-- TESTING SOCKET - make sure to implement this into a component instead-->
+    <!---->
     <script type="text/javascript">
-      $(document).ready(function() {
-          var socket = io.connect('http://127.0.0.1:5000');
-          socket.on('connect', function() {
-              socket.send('User has connected!');
-          });
-
-          socket.on('message', function(msg) {
-              $("#messages").append('<li>'+msg+'</li>');
-              console.log('Received message');
-          });
-
-          //setInterface is cheating
-          $('#sendbutton').on('click', setInterval(function() {
-              socket.send($('#myMessage').val());
-              $('#myMessage').val(''); // clears out the msg for new
-          }, 5000));
+      const socket = io.connect('localhost:5000');
+      socket.on('connect', function() {
+        socket.emit('my event', {data: 'I\'m connected!'});
       });
-      </script>
-      <ul id="messages"></ul>
-      <input type="text" id="myMessage">
-      <button id="sendbutton">Send</button>
+
+      socket.on('Temperature', function(data){update_temperature(data)});
+      function update_temperature(temperature)
+      {
+        document.getElementById('Temperature').innerText = temperature;
+      }
+
+      function led_change(value)
+      {
+        socket.emit('led_change', value);
+      }
+
+      socket.on('send_back', function(data){
+        document.getElementById('color_div').innerText = data;
+      });
+    </script>
   </body>
 </html>
